@@ -1,151 +1,6 @@
 #ifdef _MSC_VER
 #pragma setlocale("C")
 #endif
-// DockCtrl.lay
-
-T_("Select skin:")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("Kaplama:")
-
-T_("Reset Layout")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("Sıfırla")
-
-T_("Press to reset window layout.")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("Pencere düzenini sıfırlamak için tıklayın")
-
-T_("Show Icons")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("Simgeleri Göster")
-
-T_("Show Buttons")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("Düğmeleri Göster")
-
-T_("Tab Options")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("Sekmeli Pencere Seçenekleri")
-
-T_("Allow Nested Tabs")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("İçiçe Sekmelere İzin Ver")
-
-T_("Auto Align Tabs")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("Sekmeleri Otomatik Düzenle")
-
-T_("AutoHide Options")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("Otomatik Gizleme Seçenekleri")
-
-T_("Below are the available dockable window.\nLeft clicking on the items will "
-     "popup the action menu for the selected item.")
-afZA("")
-beBY("")
-bgBG("")
-csCZ("")
-deDE("")
-esES("")
-fiFI("")
-frFR("")
-huHU("")
-ruRU("")
-srSP("")
-trTR("Pencerelerin denetim menüsünü açmak için aşağıdaki listede\nyer "
-     "alan pencerelere tıklayın")
-
-
 // DockCtrl.cpp
 
 T_("LEFT")
@@ -153,7 +8,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("LINKS")
 esES("")
 fiFI("")
 frFR("")
@@ -167,7 +22,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("OBEN")
 esES("")
 fiFI("")
 frFR("")
@@ -181,7 +36,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("RECHTS")
 esES("")
 fiFI("")
 frFR("")
@@ -195,7 +50,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("UNTEN")
 esES("")
 fiFI("")
 frFR("")
@@ -209,7 +64,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("GLEITEND")
 esES("")
 fiFI("")
 frFR("")
@@ -223,7 +78,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("LEER")
 esES("")
 fiFI("")
 frFR("")
@@ -237,7 +92,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("SICHTBAR")
 esES("")
 fiFI("")
 frFR("")
@@ -251,7 +106,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("VERSTECKT")
 esES("")
 fiFI("")
 frFR("")
@@ -265,7 +120,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("AUTOMATISCH VERSTECKEN")
 esES("")
 fiFI("")
 frFR("")
@@ -279,7 +134,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("GESCHLOSSEN")
 esES("")
 fiFI("")
 frFR("")
@@ -293,7 +148,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("REGISTERKARTE")
 esES("")
 fiFI("")
 frFR("")
@@ -307,7 +162,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Einstellungen")
 esES("")
 fiFI("")
 frFR("")
@@ -321,7 +176,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Fenstername")
 esES("")
 fiFI("")
 frFR("")
@@ -349,7 +204,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Status")
 esES("")
 fiFI("")
 frFR("")
@@ -363,7 +218,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Position")
 esES("")
 fiFI("")
 frFR("")
@@ -377,7 +232,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Klassisch")
 esES("")
 fiFI("")
 frFR("")
@@ -391,7 +246,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Erweitert")
 esES("")
 fiFI("")
 frFR("")
@@ -422,7 +277,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Ohne Namen")
 esES("")
 fiFI("")
 frFR("")
@@ -444,7 +299,7 @@ esES("Cerra")
 fiFI("Sulje")
 frFR("Fermer")
 huHU("Bezár")
-ruRU("")
+ruRU("Закрыть")
 srSP("Zatvori")
 trTR("Kapat")
 
@@ -453,7 +308,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Automatisch verstecken")
 esES("")
 fiFI("")
 frFR("")
@@ -467,7 +322,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Fensterposition")
 esES("")
 fiFI("")
 frFR("")
@@ -481,7 +336,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Registerkartenfenster")
 esES("")
 fiFI("")
 frFR("")
@@ -498,7 +353,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Einratsen")
 esES("")
 fiFI("")
 frFR("")
@@ -512,7 +367,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Gleiten")
 esES("")
 fiFI("")
 frFR("")
@@ -526,7 +381,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Zeigen")
 esES("")
 fiFI("")
 frFR("")
@@ -540,7 +395,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Verstecken")
 esES("")
 fiFI("")
 frFR("")
@@ -606,6 +461,152 @@ srSP("Dno")
 trTR("Alt")
 
 
+// DockCtrl.lay
+
+T_("Select skin:")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Wählen Sie das Erscheinungsbild:")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("Kaplama:")
+
+T_("Reset Layout")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Anordnung zurücksetzen")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("Sıfırla")
+
+T_("Press to reset window layout.")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Bitte betätigen, um Fensteranordnung zurückzusetzen.")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("Pencere düzenini sıfırlamak için tıklayın")
+
+T_("Show Icons")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Zeige Icons")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("Simgeleri Göster")
+
+T_("Show Buttons")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Zeige Buttons")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("Düğmeleri Göster")
+
+T_("Tab Options")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Registerkertenoptionen")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("Sekmeli Pencere Seçenekleri")
+
+T_("Allow Nested Tabs")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Erlaube verschachtelte Registerkarten")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("İçiçe Sekmelere İzin Ver")
+
+T_("Auto Align Tabs")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Ordne Registerkarten automatisch an")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("Sekmeleri Otomatik Düzenle")
+
+T_("AutoHide Options")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Optionen zum automatischen verstecken")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("Otomatik Gizleme Seçenekleri")
+
+T_("Below are the available dockable window.\nLeft clicking on the items will "
+     "popup the action menu for the selected item.")
+afZA("")
+beBY("")
+bgBG("")
+csCZ("")
+deDE("Unten finden Sie die verfügbaren beweglichen Fenster.\nLinksklicköffnet "
+     "Popup Menü mit verfügbaren Aktionen für das ausgewählte Element.")
+esES("")
+fiFI("")
+frFR("")
+huHU("")
+ruRU("")
+srSP("")
+trTR("Pencerelerin denetim menüsünü açmak için aşağıdaki listede\nyer "
+     "alan pencerelere tıklayın")
+
+
 // Obsolete
 
 T_("New Tab")
@@ -613,7 +614,7 @@ afZA("")
 beBY("")
 bgBG("")
 csCZ("")
-deDE("")
+deDE("Neue Registerkarte")
 esES("")
 fiFI("")
 frFR("")
